master/nginx_ingress_2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /weegle-b
        backend:
          serviceName: weegle-b
          servicePort: 30003
